# vorokite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_random_points.py  02_batch_metrics.py  hexagon.py  rectangles.py
tests/: test_export.py  test_solver_recon.py  test_utils.py
vorokite/: __init__.py  solver.py  utils.py
